--- a/01_home.html
+++ b/01_home.html
@@ -1,13 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../styles/home.css" rel="stylesheet">
-    <title>TAKE PART</title>
-</head>
-<body>
-    <div></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Navbar</title>
+    <!-- font-awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
+
+    <!-- styles -->
+    <link rel="stylesheet" href="../styles/styles.css" />
+  </head>
+  <body background="../images/TAKE PART.jpg">
+    <nav>
+      <div class="nav-center">
+        <!-- nav header -->
+        <div class="nav-header">
+          <img src="../images/TAKE PART.jpg" class="logo" alt="logo" />
+          <button class="nav-toggle">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+        <!-- links -->
+        <ul class="links">
+          <li>
+            <a href="../public/01_home.html">home</a>
+          </li>
+          <li>
+            <a href="../public/00_about.html">about</a>
+          </li>
+          <li>
+            <a href="../public/00_contact.html">contact</a>
+          </li>
+        </ul>
+        <!-- social media -->
+        <ul class="social-icons">
+          <li>
+            <a href="https://www.gmail.com">
+              <i class="fab fa-gmail"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- javascript -->
+    <div>
+      <h1>TAKE PART</h1>
+      <button class="button">be a part</button>
+    </div>
+  </body>
 </html>
