--- a/05_user_profile.html
+++ b/05_user_profile.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Take Part</title>
-    <link rel="stylesheet" href="../styles/admin_profile.css">
+    <link rel="stylesheet" href="../styles/user_profile.css">
 </head>
 <body>
     <div>
         <div class="row">
-            <div class="col-3 adminleftcol">
-                <img class="adminicon" src="../images/adminicon.png" alt="icon">
+            <div class="col-3 userleftcol">
+                <img class="usericon" src="../images/adminicon.png" alt="icon">
                 <header>
-                    <h1 class="admin">Admin</h1>
+                    <h1 class="user">Name</h1>
                     <br>
-                    <h2>UserName</h2>                   
+                    <h2>UserName</h2> 
                     <h2><i>Email ID</i></h2>
+                    <button id="viewmyactivities">VIEW MY ACTIVITIES</button>
                 </header>                
             </div>
             <div class="col-9">
@@ -28,10 +29,10 @@
                     <img  src="../images/adminbackground.jpg" id="rightcolbackground">
                 </div>
                 <div class="container">
-                    <h1>TAKE PART</h1>
-                    <div class="adminbuttons">
-                        <button>VIEW USERS</button>
-                        <button>DATABASE</button>
+                    <h1>THANK YOU FOR BEING A PART OF OUR MISSION</h1>
+                    <div class="userbuttons">
+                        <button>DONATE</button>
+                        <button>REQUEST</button>
                     </div>
                 </div>
             </div>
